styling changes, bug fixes, and keyboard input

--- a/index.html
+++ b/index.html
@@ -9,64 +9,72 @@
       src="https://kit.fontawesome.com/9efd089a16.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="result">
-      <h1 id="result-text" class="result-text"></h1>
-    </div>
-    <div class="wrapper">
-      <button id="clear-btn" class="clear-btn">
-        <i class="fa-solid fa-c"></i>
-      </button>
-      <button id="backspace-btn" class="backspace-btn">
-        <i class="fa-solid fa-delete-left"></i>
-      </button>
-      <button id="seven-btn" class="seven-btn">
-        <i class="fa-solid fa-7"></i>
-      </button>
-      <button id="eight-btn" class="eight-btn">
-        <i class="fa-solid fa-8"></i>
-      </button>
-      <button id="nine-btn" class="nine-btn">
-        <i class="fa-solid fa-9"></i>
-      </button>
-      <button id="four-btn" class="four-btn">
-        <i class="fa-solid fa-4"></i>
-      </button>
-      <button id="five-btn" class="five-btn">
-        <i class="fa-solid fa-5"></i>
-      </button>
-      <button id="six-btn" class="six-btn">
-        <i class="fa-solid fa-6"></i>
-      </button>
-      <button id="one-btn" class="one-btn">
-        <i class="fa-solid fa-1"></i>
-      </button>
-      <button id="two-btn" class="two-btn">
-        <i class="fa-solid fa-2"></i>
-      </button>
-      <button id="three-btn" class="three-btn">
-        <i class="fa-solid fa-3"></i>
-      </button>
-      <button id="div-equa_btn" class="div-equa_btn">
-        <i class="fa-solid fa-divide"></i>
-      </button>
-      <button id="mult-equa_btn" class="mult-equa_btn">
-        <i class="fa-solid fa-xmark"></i>
-      </button>
-      <button id="sub-equa_btn" class="sub-equa_btn">
-        <i class="fa-solid fa-minus"></i>
-      </button>
-      <button id="add-equa_btn" class="add-equa_btn">
-        <i class="fa-solid fa-plus"></i>
-      </button>
-      <button id="zero-btn" class="zero-btn">
-        <i class="fa-solid fa-0"></i>
-      </button>
-      <button id="equal-equa_btn" class="equal-equa_btn">
-        <i class="fa-solid fa-equals"></i>
-      </button>
+    <div class="container">
+      <div class="result">
+        <h1 id="result-text" class="result-text">0</h1>
+      </div>
+      <div class="wrapper">
+        <button id="clear-btn" class="clear-btn">
+          <i class="fa-solid fa-c"></i>
+        </button>
+        <button id="backspace-btn" class="backspace-btn">
+          <i class="fa-solid fa-delete-left"></i>
+        </button>
+        <button id="seven-btn" class="seven-btn">
+          <i class="fa-solid fa-7"></i>
+        </button>
+        <button id="eight-btn" class="eight-btn">
+          <i class="fa-solid fa-8"></i>
+        </button>
+        <button id="nine-btn" class="nine-btn">
+          <i class="fa-solid fa-9"></i>
+        </button>
+        <button id="four-btn" class="four-btn">
+          <i class="fa-solid fa-4"></i>
+        </button>
+        <button id="five-btn" class="five-btn">
+          <i class="fa-solid fa-5"></i>
+        </button>
+        <button id="six-btn" class="six-btn">
+          <i class="fa-solid fa-6"></i>
+        </button>
+        <button id="one-btn" class="one-btn">
+          <i class="fa-solid fa-1"></i>
+        </button>
+        <button id="two-btn" class="two-btn">
+          <i class="fa-solid fa-2"></i>
+        </button>
+        <button id="three-btn" class="three-btn">
+          <i class="fa-solid fa-3"></i>
+        </button>
+        <button id="div-equa_btn" class="div-equa_btn">
+          <i class="fa-solid fa-divide"></i>
+        </button>
+        <button id="mult-equa_btn" class="mult-equa_btn">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+        <button id="sub-equa_btn" class="sub-equa_btn">
+          <i class="fa-solid fa-minus"></i>
+        </button>
+        <button id="add-equa_btn" class="add-equa_btn">
+          <i class="fa-solid fa-plus"></i>
+        </button>
+        <button id="zero-btn" class="zero-btn">
+          <i class="fa-solid fa-0"></i>
+        </button>
+        <button id="equal-equa_btn" class="equal-equa_btn">
+          <i class="fa-solid fa-equals"></i>
+        </button>
+      </div>
     </div>
   </body>
 
